Alignment fix

--- a/src/components/HeroSec.css
+++ b/src/components/HeroSec.css
@@ -25,6 +25,9 @@
   transform: translateX(-50%) translateY(-50%);
 }
 @media only screen and (max-width: 770px) {
+  .HeroSec {
+    padding: 2rem 0;
+  }
   .hero-text {
     font-size: 2.5rem;
   }
