--- a/src/components/LearnMoreSec.css
+++ b/src/components/LearnMoreSec.css
@@ -10,7 +10,7 @@
   order: 1;
 }
 .learn-more-text {
-  padding: 4vw 8.9vw;
+  padding: 4rem 10vw 4rem 10vw;
 }
 .title {
   margin: 2rem 0;
